# stellwerksim-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yaml  release-please.yaml  release.yaml
examples/: simple.rs
src/: builder.rs  lib.rs  protocol.rs
src/protocol/: mod.rs  platform_list.rs  simulator_time.rs  status.rs  system_info.rs  train_details.rs  train_list.rs  train_timetable.rs  ways.rs
src/protocol/serialization/: mod.rs  time_milli_seconds.rs
src/protocol/serialize/: mod.rs  time_hours_minutes.rs
