[package]
name = "stellwerksim"
version = "0.1.1"
edition = "2021"
description = "Rust SDK for StellwerkSim."
authors = ["Marie Ramlow <me@nycode.dev>"]
readme = "./README.md"
license = "MIT OR Apache-2.0"
keywords = ["stellwerksim"]
repository = "https://github.com/NyCodeGHG/stellwerksim-rs"

[features]
default = ["simulator-time", "timetable"]
simulator-time = ["dep:chrono", "dep:serde_with"]
timetable = ["dep:chrono", "dep:serde_with"]

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "sync"] }
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.6"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"], optional = true }
serde_with = { version = "2", features = ["chrono"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
